# ha-xenopixel

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PROTOCOL.md  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yaml  tests.yaml  validate.yaml
custom_components/xenopixel/: __init__.py  config_flow.py  const.py  manifest.json  strings.json
custom_components/xenopixel/translations/: en.json
custom_components/xenopixel/xenopixel_ble/: __init__.py  const.py  protocol.py
docs/: BLE_COMPATIBILITY.md
esphome/: .gitignore  README.md  secrets.yaml.example  xenopixel_1saber.yaml  xenopixel_1saber_s3.yaml  xenopixel_2sabers.yaml  xenopixel_2sabers_s3.yaml  xenopixel_simple.yaml
esphome/components/xenopixel_light/: light.py  xenopixel_light.h
references/: Agent_review.md  Log_2026-01-28 17_33_07_on_off_twice.txt  Log_2026-01-28_18_10_25_onOff_color.txt  Log_2026-01-31 17_22_32blast_clash_force_drag_lock.txt  config.ini
src/xenopixel_ble/: __init__.py  const.py
tests/: __init__.py  conftest.py  test_const.py  test_diagnose_ble.py  test_parse_btsnoop.py  test_protocol.py
tests/cpp/: CMakeLists.txt  test_xenopixel_light.cpp
tests/cpp/mocks/: esphome_mock.h
tests/cpp/mocks/esphome/components/globals/: globals_component.h
tools/: diagnose_ble.py  parse_btsnoop.py  test_saber.py
